test improvements